# advent_of_code

./: .env.example  .gitignore  pyproject.toml
src/: challenge_runner.py  main.py
src/challenges/2018/day1/: main.py
src/challenges/2022/day1/: main.py
src/challenges/2022/day10/: main.py
src/challenges/2022/day11/: main.py
src/challenges/2022/day12/: main.py
src/challenges/2022/day13/: main.py
src/challenges/2022/day14/: main.py
src/challenges/2022/day15/: main.py
src/challenges/2022/day16/: main.py
src/challenges/2022/day17/: main.py
src/challenges/2022/day18/: main.py
src/challenges/2022/day2/: main.py
src/challenges/2022/day20/: main.py
src/challenges/2022/day21/: main.py
src/challenges/2022/day22/: main.py
src/challenges/2022/day23/: main.py
src/challenges/2022/day3/: main.py
src/challenges/2022/day4/: main.py
src/challenges/2022/day5/: main.py
src/challenges/2022/day6/: main.py
src/challenges/2022/day7/: main.py
src/challenges/2022/day8/: main.py
src/challenges/2022/day9/: main.py
src/challenges/2023/day1/: main.py
src/challenges/2023/day10/: main.py
src/challenges/2023/day11/: main.py
src/challenges/day1/: main.py
src/challenges/day10/: main.py
src/challenges/day11/: main.py
src/challenges/day12/: main.py
src/challenges/day13/: main.py
src/challenges/day2/: main.py
src/challenges/day3/: main.py
src/challenges/day4/: main.py
src/challenges/day5/: main.py
src/challenges/day6/: main.py
src/challenges/day7/: main.py
src/challenges/day8/: main.py
src/challenges/day9/: main.py
(+13 files in other folders)
