[tool.pdm]

[tool.pdm.scripts]
start = {cmd = "python3 -B -m src.main run"}
test = {cmd = "python3 -B -m src.main run --test-all"}
create = {cmd = "python3 -B -m src.main create", env_file=".env"}

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Alexander Zach", email = "alexander.zach1@gmail.com"},
]
dependencies = [
    "argparse>=1.4.0",
    "termcolor>=2.1.1",
    "requests>=2.28.1",
    "tqdm>=4.64.1",
    "numpy>=1.24.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

